Stop vote container hitting the bottom on smalll screen

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,6 @@ header h1 {
   background-color: var(--container-background-color);
   border-radius: 1rem;
   color: var(--main-background-color);
-  margin: -5rem 1rem 0;
+  margin: -5rem 1rem 1rem;
   padding: 1rem;
 }
